# peg-insertion

./: .gitignore  1.csv  CMakeLists.txt  GradientQLearning-training-2.ipynb  GradientQLearning.ipynb  actionTableFromRotM.m  findAction.m  makeActionTable.m  output1.csv  theta_100.csv
00-dual_proxy_motion_normal_force_haptic/: CMakeLists.txt  controller.cpp  controller_force_sensor_feedback.cpp
00-dual_proxy_motion_normal_force_robot/: CMakeLists.txt  controller.cpp  panda_arm.urdf  panda_arm_ati_probe.urdf  simviz.cpp  viz.cpp  world_probe.urdf
01-kinesthetic-teaching/: CMakeLists.txt  controller.cpp
01-kinesthetic-teaching/data_logging/training_data/high-contact-exploration/12-02-2023/: data_003_2023-12-02.22.17.55.csv  data_006_2023-12-02.22.22.19.csv  data_007_2023-12-02.22.27.45.csv  data_008_2023-12-02.22.35.23.csv  data_010_2023-12-02.22.45.07.csv
01-kinesthetic-teaching/data_logging/training_data/high-contact-exploration/12-08-2023/: data_2023-12-08.23.47.15.csv  data_2023-12-08.23.52.15.csv  data_2023-12-08.23.53.32.csv  data_2023-12-09.00.09.59.csv  data_2023-12-09.00.11.40.csv  data_2023-12-09.00.14.54.csv  data_2023-12-09.00.15.48.csv  data_2023-12-09.00.21.26.csv  data_2023-12-09.00.51.50.csv  data_2023-12-09.00.53.57.csv  data_2023-12-09.01.03.30.csv  data_2023-12-09.01.05.08.csv
01-kinesthetic-teaching/data_logging/training_data/high-contact-exploration/12-09-2023/: data_2023-12-09.02:22:34.csv  data_2023-12-09.02:31:30.csv  data_2023-12-09.02:33:00.csv  data_2023-12-09.02:33:49.csv  data_2023-12-09.02:35:22.csv  data_2023-12-09.02:37:14.csv  data_2023-12-09.02:40:28.csv
02-policy-controller/: CMakeLists.txt  controller.cpp
Matlab-data-cleaning/: 1.csv  11.csv  13.csv  14.csv  15.csv  17.csv  2.csv  21.csv  23.csv  4.csv  5.csv  9.csv  actionTableDeltaPhi.m  actionTableFromRotM.m  data_2023-12-09.02_39_03.csv  data_2023-12-09.02_39_51.csv  data_2023-12-09.02_41_32.csv  data_2023-12-09.02_42_43.csv  findActionDeltaPhi.m  findActionFromRotM.m  test_data.csv  test_data_full.csv
Model/: panda_arm_ati_probe.urdf
cleaned-RotMtoEul-forQLearning/: output1.csv  output10.csv  output11.csv  output2.csv  output3.csv  output4.csv  output5.csv  output6.csv  output7.csv  output8.csv  output9.csv
cleaned-deltaPhi-forQLearning/: output1.csv  output10.csv  output11.csv  output2.csv  output3.csv  output4.csv  output5.csv  output6.csv  output7.csv  output8.csv  output9.csv
data/: data_cleanup.ipynb  data_plotter.ipynb  image_processing.ipynb
data-and-learning/: theta_10_iteration.txt  theta_1_iteration.txt  theta_20_iteration.txt
dense-reward-v1-weights/: GradientQLearning.ipynb  theta_1000_dense.csv  theta_100_dense.csv  theta_1010_dense.csv  theta_1020_dense.csv  theta_1030_dense.csv  (+595 more)
(+183 files in other folders)
